--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
   <footer>
     Lunes 25 de Agosto de 2025 | Taller de ideación y creatividad | Sección 1
     <div>
-      Código HTML publicado con <a href="https://github.com/antomarinooo" target="_blank" rel="noopener">@antomarinooo en github</a>
+      Código HTML publicado con <a href="https://github.com/antomarinooo/datos-circulacion-taller-ideacion" target="_blank" rel="noopener">@antomarinooo en github</a>
     </div>
   </footer>
 </body>
